# toshling

./: .gitignore  LICENSE  README.md  generate.py  requirements-dev.txt  setup.cfg
test/: _base.py  test_accounts.py  test_entries.py
toshling/: __generate.py  __init__.py  _client.py  _endpoints.py  _endpoints.py.tmpl  _generate.py  client.py  endpoints.py  endpoints.py.tmpl
toshling/endpoints/: _base.py  _generated.py
toshling/models/: __init__.py  _generate.py  argument_types.py  return_types.py
