[metadata]
name = toshling
description = a Python client library for the Toshl API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ioces/toshling
author = Matthew Schubert
author_email = ms-toshling@ioces.com
license = MIT License

[options]
packages = find:
install_requires =
  requests
  statham-schema
